# tutorial-github-codespaces-poetry

./: .gitignore  README.md  pyproject.toml  test.py  test_blob.py
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
